# terrarium

./: .gitignore  Cargo.toml  readme.MD
examples/input-handling/: Cargo.toml  readme.MD
examples/input-handling/src/: input.rs  main.rs
examples/massive/: Cargo.toml  build.rs  readme.MD
examples/massive/assets/: Emitter.glb  Suzanne.glb
examples/massive/src/: camera_controller.rs  main.rs  world.rs
examples/minimal/: Cargo.toml  build.rs
examples/minimal/src/: main.rs
terrarium/: Cargo.toml  build.rs
terrarium/shaders/: blit_pass.wgsl  bloom_downsample_pass.wgsl  bloom_upsample_pass.wgsl  build_frustum_pass.wgsl  color_correction_pass.wgsl  debug_line_pass.wgsl  debug_pass.wgsl  emissive_stabilization_pass.wgsl  gbuffer_pass.wgsl  gizmo_pass.wgsl  light_cull_pass.wgsl  ltc_cull_pass.wgsl  ltc_lighting_pass.wgsl  mirror_reflection_pass.wgsl  packing.wgsl  rt_gbuffer_pass.wgsl  shade_pass.wgsl  shadow_pass.wgsl  ssao_pass.wgsl  taa_pass.wgsl  triangle_test_pass.wgsl  write_indirect_args_pass.wgsl
terrarium/shaders/shared/: brdf.wgsl  color.wgsl  debug_line_bindings.wgsl  frustum.wgsl  gbuffer.wgsl  gbuffer_bindings.wgsl  linear_transformed_cosines.wgsl  linear_transformed_cosines_bindings.wgsl  material_pool.wgsl  material_pool_bindings.wgsl  math.wgsl  packing.wgsl  random.wgsl  sampling.wgsl  sky_bindings.wgsl  trace.wgsl  vertex_pool.wgsl  vertex_pool_bindings.wgsl  xr.wgsl
terrarium/src/: app_loop.rs  lib.rs  xr.rs
terrarium/src/app_loop/: handler.rs  mod.rs
terrarium/src/egui_renderer/: mod.rs  renderer.rs
terrarium/src/gpu_resources/: debug_lines.rs  gbuffer.rs  linear_block_allocator.rs  linear_transformed_cosines.rs  material_pool.rs  mod.rs  sky.rs  vertex_pool.rs
terrarium/src/helpers/: input_handler.rs  mod.rs  timer.rs
terrarium/src/render_passes/: blit_pass.rs  bloom_pass.rs  build_frustum_pass.rs  color_correction_pass.rs  debug_line_pass.rs  debug_pass.rs  emissive_stabilization_pass.rs  gbuffer_pass.rs  gizmo_pass.rs  ltc_cull_pass.rs  ltc_lighting_pass.rs  mirror_reflection_pass.rs  mod.rs  rt_gbuffer_pass.rs  shade_pass.rs  shadow_pass.rs  ssao_pass.rs  taa_pass.rs  triangle_test_pass.rs  write_indirect_args_pass.rs
terrarium/src/wgpu_util/: context.rs  mod.rs  pipeline_database.rs  surface.rs
terrarium/src/world/: components.rs  mod.rs  transform.rs
terrarium/src/xr/: mod.rs
