[package]
name = "example-minimal"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[dependencies]
terrarium.workspace = true

anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
glam.workspace = true
ugm.workspace = true
wgpu.workspace = true
winit.workspace = true

[build-dependencies]
ugm = { workspace = true, features = ["gltf"] }
xshell.workspace = true

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
[profile.release.build-override]
opt-level = 3
codegen-units = 16